@@ -59,21 +59,6 @@ if (!function_exists ('array_intersect_key'))
 	}
 }
 
-// Backported function: wp_parse_str
-// Not available on WP 2.2
-//
-if (!function_exists ('wp_parse_str')) {
-	/**
-	 * @ignore
-	 */
-	function wp_parse_str( $string, &$array ) {
-		parse_str( $string, $array );
-		if ( get_magic_quotes_gpc() )
-			$array = stripslashes_deep( $array ); // parse_str() adds slashes if magicquotes is on.  See: http://php.net/parse_str
-		$array = apply_filters( 'wp_parse_str', $array );
-	}
-}
-
 /**
  * Convenience function: Check if OS is Windows
  *
